tag statuses updated for provider UR

--- a/app/views/v13/provider/view/3c-manage-applications-shortlist.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shortlist.html
@@ -190,6 +190,15 @@ Manage vacancy
     disability: "No"
   },
   {
+    name: "Judy Ward",
+    id: "897DW5T",
+    status: "employer reviewed",
+    link: "../account/application-employer-reviewed-no",
+    classes: "govuk-tag--blue",
+    date: "15 Jan 2023",
+    disability: "No"
+  },
+  {
     name: "Charles Davis",
     id: "B2LH789",
     status: "shared",
