--- a/app/views/v13/provider/view/3c-manage-applications-unsuccessful-single.html
+++ b/app/views/v13/provider/view/3c-manage-applications-unsuccessful-single.html
@@ -168,9 +168,9 @@ Manage vacancy
     {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "shared",
+      status: "new",
       link: "../account/application-shared",
-      classes: "govuk-tag--yellow",
+      classes: "govuk-tag--blue",
       date: "13 Jan 2023",
       disability: "Prefer not to say"
     },
