update to traineeships (no longer create or submit)

--- a/app/views/v14/traineeships/view-vacancy/0-dashboard.html
+++ b/app/views/v14/traineeships/view-vacancy/0-dashboard.html
@@ -23,10 +23,11 @@ Recruitment - {{serviceName}} - GOV.UK
       </div>
       <div class="govuk-notification-banner__content">
         <p class="govuk-notification-banner__heading">
-          The last possible start date for a traineeship is 31 July 2023.
+          You can no longer create new traineeship vacancies using this service. 
         </p>
-        <p>You will not be able to submit new vacancies after 30 June 2023. Any new vacancies you create must close on or before 15 July 2023.</p>
-        <p>Learn more about <a href="">[traineeship announcement title]</a>.</p>
+        <p>You can still manage vacancies that are already live.
+        </p>
+        <p>Read the <a href="#">statement about how traineeships are changing</a>.</p>
       </div>
     </div>
 
@@ -41,7 +42,7 @@ Recruitment - {{serviceName}} - GOV.UK
 
       <div class="govuk-grid-column-one-third" style="text-align: right;">
         <!--<a href="create/create-vacancy" class="govuk-button" data-module="govuk-button">Create an advert</a>-->
-        <a href="../create/start-page" class="govuk-button" data-module="govuk-button">Create vacancy</a>
+        <!-- <a href="../create/start-page" class="govuk-button" data-module="govuk-button">Create vacancy</a> -->
       </div>
       </div>
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
@@ -99,12 +100,12 @@ Recruitment - {{serviceName}} - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">8</span>
-              <a class="card-link" href="1a-draft">
-                Draft vacancies
-              </a>
+              <span class="das-card--stat"></span>
+              <br>
+                <b>Draft vacancies</b>
+            
             </h3>
-            <p class="govuk-body das-card--description">Vacancies that need completing and sending for review.</p>
+            <p class="govuk-body das-card--description">You can no longer create traineeship vacancies using this service.</p>
             <!-- <p class="govuk-body das-card--description">./vacancies published on Find an Apprenctice service</p>
               <ul class="das-card--tasks govuk-list">
                 <li>
