--- a/app/views/v14/traineeships/view-vacancy/1a-draft.html
+++ b/app/views/v14/traineeships/view-vacancy/1a-draft.html
@@ -102,11 +102,11 @@ Vacancies
 
     <h1 class="govuk-heading-xl">Vacancies</h1>
   </div>
-  <div class="govuk-grid-column-one-third" style="text-align:right;">
+  <!-- <div class="govuk-grid-column-one-third" style="text-align:right;">
 
       <p class="govuk-body govuk-!-margin-bottom-0"><a href="../create/start-page" class="govuk-button govuk-!-margin-bottom-2">Create vacancy</a></p>
 
-  </div>
+  </div> -->
 </div>
 
 <!-- FILTER start -->
@@ -123,7 +123,7 @@ Vacancies
             <option value="live" {% if data.filter=='live' %}selected="selected" {%endif%}>live vacancies</option>
             <option value="rejected" {% if data.filter=='rejected' %}selected="selected" {%endif%}>rejected vacancies</option>
             <option value="pending" {% if data.filter=='pending review' %}selected="selected" {%endif%}>live vacancies</option>
-            <option value="draft" {% if data.filter=='draft' %}selected="selected" {%endif%}>draft vacancies</option>
+            <!-- <option value="draft" {% if data.filter=='draft' %}selected="selected" {%endif%}>draft vacancies</option> -->
             <option value="closed" {% if data.filter=='closed' %}selected="selected" {%endif%}>closed vacancies</option>
           </optgroup>
           <optgroup label="Other">
