--- a/app/views/v14/traineeships/view-vacancy/3a-live.html
+++ b/app/views/v14/traineeships/view-vacancy/3a-live.html
@@ -97,16 +97,45 @@ Vacancies
 {% endblock %}
 
 {% block content %}
+
+<style>
+  .govuk-notification-banner__content > * {
+    box-sizing: border-box;
+   max-width: 100%; }
+</style>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full-width">
+
+<div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+  <div class="govuk-notification-banner__header">
+    <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+      Important
+    </h2>
+  </div>
+  <div class="govuk-notification-banner__content">
+    <p class="govuk-notification-banner__heading">
+      You can no longer create new traineeship vacancies using this service. 
+    </p>
+    <p>You can still manage vacancies that are already live.
+    </p>
+    <p>Read the <a href="#">statement about how traineeships are changing</a>.</p>
+  </div>
+</div>
+
+  </div>
+</div>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
     <h1 class="govuk-heading-xl">Vacancies</h1>
   </div>
-  <div class="govuk-grid-column-one-third" style="text-align:right;">
+  <!-- <div class="govuk-grid-column-one-third" style="text-align:right;">
 
       <p class="govuk-body govuk-!-margin-bottom-0"><a href="../create/start-page" class="govuk-button govuk-!-margin-bottom-2">Create vacancy</a></p>
 
-  </div>
+  </div> -->
 </div>
 
 <!-- FILTER start -->
@@ -123,7 +152,7 @@ Vacancies
             <option value="live" {% if data.filter=='live' %}selected="selected" {%endif%}>live vacancies</option>
             <option value="rejected" {% if data.filter=='rejected' %}selected="selected" {%endif%}>rejected vacancies</option>
             <option value="pending" {% if data.filter=='pending review' %}selected="selected" {%endif%}>live vacancies</option>
-            <option value="draft" {% if data.filter=='draft' %}selected="selected" {%endif%}>draft vacancies</option>
+            <!-- <option value="draft" {% if data.filter=='draft' %}selected="selected" {%endif%}>draft vacancies</option> -->
             <option value="closed" {% if data.filter=='closed' %}selected="selected" {%endif%}>closed vacancies</option>
           </optgroup>
           <optgroup label="Other">
