--- a/app/views/v14/traineeships/view-vacancy/0-dashboard.html
+++ b/app/views/v14/traineeships/view-vacancy/0-dashboard.html
@@ -100,7 +100,7 @@ Recruitment - {{serviceName}} - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat"></span>
+              <span class="das-card--stat">0</span>
               <br>
                 <b>Draft vacancies</b>
             
