--- a/app/views/v14/traineeships/view-vacancy/0-dashboard.html
+++ b/app/views/v14/traineeships/view-vacancy/0-dashboard.html
@@ -23,11 +23,9 @@ Recruitment - {{serviceName}} - GOV.UK
       </div>
       <div class="govuk-notification-banner__content">
         <p class="govuk-notification-banner__heading">
-          You can no longer create new traineeship vacancies using this service. 
+          This service is closing soon. You will not be able to manage traineeship vacancies using this service after 31 July 2023.
         </p>
-        <p>You can still manage vacancies that are already live.
-        </p>
-        <p>Read the <a href="#">statement about how traineeships are changing</a>.</p>
+        <p><a href="#">Read the statement about how traineeships are changing</a></p>
       </div>
     </div>
 
