--- a/app/views/v14/traineeships/view-vacancy/1a-pending-esfa-review.html
+++ b/app/views/v14/traineeships/view-vacancy/1a-pending-esfa-review.html
@@ -104,8 +104,7 @@ Vacancies
    max-width: 100%; }
 </style>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full-width">
+
 
 <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
   <div class="govuk-notification-banner__header">
@@ -115,28 +114,27 @@ Vacancies
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      You can no longer create new traineeship vacancies using this service. 
+      This service is closing soon. You will not be able to manage traineeship vacancies using this service after 31 July 2023.
     </p>
-    <p>You can still manage vacancies that are already live.
-    </p>
-    <p>Read the <a href="#">statement about how traineeships are changing</a>.</p>
+    <p><a href="#">Read the statement about how traineeships are changing</a></p>
   </div>
 </div>
 
-  </div>
-</div>
+
+
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
   
 
     <h1 class="govuk-heading-xl">Vacancies</h1>
-  </div>
+ 
   <!-- <div class="govuk-grid-column-one-third" style="text-align:right;">
 
       <p class="govuk-body govuk-!-margin-bottom-0"><a href="../create/start-page" class="govuk-button govuk-!-margin-bottom-2">Create vacancy</a></p>
 
   </div> -->
+</div>
 </div>
 
 <!-- FILTER start -->
@@ -169,6 +167,7 @@ Vacancies
       </div>
     </form>
   </div>
+  
 <!-- FILTER end -->
 
 <!-- SEARCH start -->
