--- a/app/views/v14/traineeships/view-vacancy/5a-closed.html
+++ b/app/views/v14/traineeships/view-vacancy/5a-closed.html
@@ -104,27 +104,23 @@ Vacancies
    max-width: 100%; }
 </style>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full-width">
 
-<div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
-  <div class="govuk-notification-banner__header">
-    <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-      Important
-    </h2>
-  </div>
-  <div class="govuk-notification-banner__content">
-    <p class="govuk-notification-banner__heading">
-      You can no longer create new traineeship vacancies using this service. 
-    </p>
-    <p>You can still manage vacancies that are already live.
-    </p>
-    <p>Read the <a href="#">statement about how traineeships are changing</a>.</p>
-  </div>
-</div>
 
-  </div>
-</div>
+    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Important
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <p class="govuk-notification-banner__heading">
+          This service is closing soon. You will not be able to manage traineeship vacancies using this service after 31 July 2023.
+        </p>
+        <p><a href="#">Read the statement about how traineeships are changing</a></p>
+      </div>
+    </div>
+
+
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
