trainesships summary updated and provider v14 updated

--- a/app/views/v14/_summary.html
+++ b/app/views/v14/_summary.html
@@ -169,38 +169,24 @@
         <div class="govuk-details__text">
           <table class='govuk-table'>                    
             <thead class='govuk-table__head'>
-              <!-- <tr class='govuk-table__row'>
+              <tr class='govuk-table__row'>
                 <th scope='col' class='govuk-table__header'>Page</th>
                 <th scope='col' class='govuk-table__header'>What we've done this sprint</th>
               </tr>
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>Live vacancy - <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/view-vacancy/3c-dates">Edit vacancy dates</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/traineeships/view-vacancy/0-dashboard">Traineeships dashboard </a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED the journey to edit dates</li>
+                  <li>CHANGED show banner, removed ‘create vacancy' button, changed 'drafts’ tile</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>Live vacancy - <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/view-vacancy/3b-manage-vacancy-edited">Manage vacancy</a></td>
+                <td class='govuk-table__cell'> <a class="govuk-link govuk-link--no-visited-state" href="/v14/traineeships/view-vacancy/1a-pending-esfa-review">Vacancies</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED to GDS style success notification banner</li>
-                  <li>CHANGED 'Edit vacancy' link to 'Edit vacancy dates'</li>
+                  <li>CHANGED show banner, remove ‘create vacancy’ button, remove ‘draft vacancies’ from filter</li>
                 </td>
               </tr>
-              <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>Choose organisation - <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/create/employers-select">Choose vacancy organisation</a>
-                <br><br> <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/create/employers-select-0">Choose vacancy organisation - 0 search results</a></td>
-                <td class='govuk-table__cell'>
-                  <li>CHANGED the page to align with other parts of selecting employer across the service - choose organisation</li>
-                </td>
-              </tr>
-              <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>Choose organisation - <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/create/employers-confirm">Confirm organisation</a></td>
-                <td class='govuk-table__cell'>
-                  <li>ADDED new page to confirm organisation</li>
-                </td>
-              </tr> -->
             </tbody>
           </table> 
         </div>
