--- a/app/views/v14/provider/view/3c-manage-applications-unsuccessful-single.html
+++ b/app/views/v14/provider/view/3c-manage-applications-unsuccessful-single.html
@@ -166,20 +166,11 @@ Manage vacancy
 {%
   set appsTableData = [
     {
-      name: "Faizal Dawood",
-      id: "C5662EA",
-      status: "in review",
-      link: "",
-      classes: "govuk-tag--yellow",
-      date: "13 Jan 2023",
-      disability: "Prefer not to say"
-    },
-    {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "shared",
-      link: "../account/application-review",
-      classes: "govuk-tag--yellow",
+      status: "new",
+      link: "../account/application-shared",
+      classes: "govuk-tag--blue",
       date: "13 Jan 2023",
       disability: "Prefer not to say"
     },
@@ -195,36 +186,36 @@ Manage vacancy
     {
       name: "Susie Noble",
       id: "LL13J9H",
-      status: "In review",
+      status: "New",
       link: "",
-      classes: "govuk-tag--yellow",
+      classes: "govuk-tag--blue",
       date: "15 Jan 2023",
       disability: "No"
     },
     {
       name: "Judy Ward",
       id: "897DW5T",
-      status: "in review",
+      status: "New",
       link: "",
-      classes: "govuk-tag--yellow",
+      classes: "govuk-tag--blue",
       date: "15 Jan 2023",
       disability: "No"
     },
     {
       name: "Charles Davis",
       id: "B2LH789",
-      status: "in review",
+      status: "New",
       link: "",
-      classes: "govuk-tag--yellow",
+      classes: "govuk-tag--blue",
       date: "15 Jan 2023",
       disability: "Prefer not to say"
     },
     {
       name: "Neena Patel",
       id: "78BH067",
-      status: "in review",
+      status: "New",
       link: "",
-      classes: "govuk-tag--yellow",
+      classes: "govuk-tag--blue",
       date: "15 Jan 2023",
       disability: "No"
     },
@@ -256,91 +247,10 @@ Manage vacancy
       disability: "Yes"
     },
     {
-      name: "Bryant Cantu",
-      id: "5J9L5BF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Loretta Giles",
-      id: "3LN79HH",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Blake Peterson",
-      id: "FL7J007",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Regina Carey",
-      id: "98J98FG",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Millicent Thompson",
-      id: "NJLP6GF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Deena Lawson",
-      id: "C78N0LK",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Garland Valenzuela",
-      id: "45DL0HV",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Jerome Cross",
-      id: "79ML444",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
       name: "Ellen Collins",
       id: "6H0IL55",
       status: "unsuccessful",
       link: "../account/application-review-no",
-      classes: "govuk-tag--red",
-      date: "13 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Wes Arnold",
-      id: "PL67D9F",
-      status: "Unsuccessful",
-      link: "",
       classes: "govuk-tag--red",
       date: "13 Jan 2023",
       disability: "No"
