--- a/app/views/v14/provider/view/3c-manage-applications-shared-multiple.html
+++ b/app/views/v14/provider/view/3c-manage-applications-shared-multiple.html
@@ -163,19 +163,10 @@ Manage vacancy
 {%
   set appsTableData = [
     {
-      name: "Faizal Dawood",
-      id: "C5662EA",
-      status: "shared",
-      link: "",
-      classes: "govuk-tag--yellow",
-      date: "13 Jan 2023",
-      disability: "Prefer not to say"
-    },
-    {
       name: "Keith Stewart",
       id: "678CFR0",
       status: "shared",
-      link: "../account/application-employer-reviewed-yes",
+      link: "../account/application-shared",
       classes: "govuk-tag--yellow",
       date: "13 Jan 2023",
       disability: "Prefer not to say"
@@ -183,9 +174,9 @@ Manage vacancy
     {
       name: "Cynthia Perez",
       id: "FL13JK0",
-      status: "new",
-      link: "",
-      classes: "govuk-tag--blue",
+      status: "shared",
+      link: "#",
+      classes: "govuk-tag--yellow",
       date: "15 Jan 2023",
       disability: "No"
     },
@@ -193,7 +184,7 @@ Manage vacancy
       name: "Susie Noble",
       id: "LL13J9H",
       status: "shared",
-      link: "",
+      link: "#",
       classes: "govuk-tag--yellow",
       date: "15 Jan 2023",
       disability: "No"
@@ -202,7 +193,7 @@ Manage vacancy
       name: "Judy Ward",
       id: "897DW5T",
       status: "shared",
-      link: "../account/application-employer-reviewed-no",
+      link: "#",
       classes: "govuk-tag--yellow",
       date: "15 Jan 2023",
       disability: "No"
@@ -211,7 +202,7 @@ Manage vacancy
       name: "Charles Davis",
       id: "B2LH789",
       status: "shared",
-      link: "",
+      link: "#",
       classes: "govuk-tag--yellow",
       date: "15 Jan 2023",
       disability: "Prefer not to say"
@@ -220,7 +211,7 @@ Manage vacancy
       name: "Neena Patel",
       id: "78BH067",
       status: "shared",
-      link: "",
+      link: "#",
       classes: "govuk-tag--yellow",
       date: "15 Jan 2023",
       disability: "No"
@@ -228,116 +219,35 @@ Manage vacancy
     {
       name: "Jose Robinson",
       id: "LY6TY44",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
+      status: "shared",
+      link: "#",
+      classes: "govuk-tag--yellow",
       date: "15 Jan 2023",
       disability: "Prefer not to say"
     },
     {
       name: "John Smith",
       id: "39DBE1A",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
+      status: "shared",
+      link: "#",
+      classes: "govuk-tag--yellow",
       date: "16 Jan 2023",
       disability: "Yes"
     },
     {
       name: "Danielle Price",
       id: "HAK9F56",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
+      status: "shared",
+      link: "#",
+      classes: "govuk-tag--yellow",
       date: "16 Jan 2023",
       disability: "Yes"
     },
     {
-      name: "Bryant Cantu",
-      id: "5J9L5BF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Loretta Giles",
-      id: "3LN79HH",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Blake Peterson",
-      id: "FL7J007",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Regina Carey",
-      id: "98J98FG",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Millicent Thompson",
-      id: "NJLP6GF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Deena Lawson",
-      id: "C78N0LK",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Garland Valenzuela",
-      id: "45DL0HV",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Jerome Cross",
-      id: "79ML444",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
       name: "Ellen Collins",
       id: "6H0IL55",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "13 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Wes Arnold",
-      id: "PL67D9F",
-      status: "Unsuccessful",
-      link: "",
+      status: "unsuccessful",
+      link: "../account/application-review-no",
       classes: "govuk-tag--red",
       date: "13 Jan 2023",
       disability: "No"
