updated apprentice wages and manage vacancy page provider

--- a/app/views/v14/_summary.html
+++ b/app/views/v14/_summary.html
@@ -105,12 +105,18 @@
                   <li>NEW page</li>
                 </td>
               </tr>
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/create/wages">Apprenticeship wage</a></td>
+                <td class='govuk-table__cell'>
+                  <li>UPDATED the wages page to be refelctive of new minimum wage rate</li>
+                </td>
+              </tr>
             </tbody>
           </table> 
         </div>
       </details>
 
-
+     
 
 
 <!-- //// PROVIDER//// -->
@@ -136,15 +142,22 @@
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v13/provider/view/0-dashboard">UR dashboard link</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/provider/view/0-dashboard">UR dashboard link</a></td>
                 <td class='govuk-table__cell'>
                   <li> For pre-share with employer (part 1) of sharing applications journey</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v13/provider/view/0-dashboard-employer-reviewed">UR dashboard link</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/provider/view/0-dashboard-employer-reviewed">UR dashboard link</a></td>
                 <td class='govuk-table__cell'>
                   <li> For employer reviewed (part 2) of sharing applications journey</li>
+                </td>
+              </tr>
+
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/provider/create/wages">Apprenticeship wage</a></td>
+                <td class='govuk-table__cell'>
+                  <li>UPDATED the wages page to be refelctive of new minimum wage rate</li>
                 </td>
               </tr>
             </tbody>
