--- a/app/views/v14/provider/view/5b-manage-vacancy.html
+++ b/app/views/v14/provider/view/5b-manage-vacancy.html
@@ -31,15 +31,15 @@ Manage vacancy
       Status
     </dt>
     <dd class="govuk-summary-list__value">
-      <strong class="govuk-tag govuk-tag--green">
-        Live
+      <strong class="govuk-tag govuk-tag--grey">
+        Closed
       </strong>
     </dd>
-    <dd class="govuk-summary-list__actions">
+    <!-- <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="#">
         Close  <span class="govuk-visually-hidden"> vacancy</span>
       </a>
-    </dd>
+    </dd> -->
   </div>
 
 
@@ -56,11 +56,11 @@ Manage vacancy
       <br>
       01 Feb 2023
     </dd>
-    <dd class="govuk-summary-list__actions">
+    <!-- <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="3c-dates">
         Change<span class="govuk-visually-hidden"> vacancy dates</span>
       </a>
-    </dd>
+    </dd> -->
   </div>
 </dl>
 
