--- a/app/views/v14/provider/view/1b-manage-vacancy.html
+++ b/app/views/v14/provider/view/1b-manage-vacancy.html
@@ -12,100 +12,83 @@ Manage vacancy
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    {% if data.alert=="clone" and data.user=='employer'%}
-    <div class="govuk-info-basic ">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full">
-          <!-- <span class="govuk-!-font-weight-bold">Activity</span> -->
-          <p class="govuk-body">You can now clone from the any vacancy management page. From your vacancies dashabord search for a vacancy and click manage.</p>
-          <p class="govuk-body govuk-!-margin-bottom-0"><a href="?alert=none" class="govuk-link--no-visited-state">Dismiss this notification</a></p>
-        </div>
-      </div>
-    </div>
-    {% endif %}
-    <h1 class="govuk-heading-xl">Manage vacancy</h1>
+  <div class="govuk-grid-column-two-thirds">
+
+        <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
+    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
+
+  
+    <p class="govuk-body-l">Vacancy reference: VAC1000000997</p>
 
 
+<!-- ////START vacancy summry//// -->
+<h2 class="govuk-heading-m">Vacancy summary</h2>
 
-<!-- ////START SUMMARY//// -->
 <dl class="govuk-summary-list">
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Status
     </dt>
     <dd class="govuk-summary-list__value">
-      Pending employer review
+      <strong class="govuk-tag">
+        Pending employer review
+      </strong>
     </dd>
+    <!-- <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="#">
+        Close  <span class="govuk-visually-hidden"> vacancy</span>
+      </a>
+    </dd> -->
   </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Vacancy title
-    </dt>
-    <dd class="govuk-summary-list__value">
-      Electronic Engineering Technician Apprentice
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Vacancy reference
-    </dt>
-    <dd class="govuk-summary-list__value">
-      VAC1000000997
-    </dd>
-  </div>
+
+
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Closing date
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Jan 2022</p>
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
+      <br>
+      <br>
       Possible start date
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Aug 2022</p>
+      31 Jan 2023
+      <br>
+      <br>
+      01 Feb 2023
     </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Disability confident
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">Yes</p>
-    </dd>
+    <!-- <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="3c-dates">
+        Change<span class="govuk-visually-hidden"> vacancy dates</span>
+      </a>
+    </dd> -->
   </div>
 </dl>
-<!-- ////END SUMMARY//// -->
-    
-
-    <div class="grid-row">
-      <div class="column-full">
 
         <p class="govuk-body">
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
         </p>
-      </div>
-    </div>
+    
+<!-- END vacancy summary  -->
+
+    <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+
   </div>
 </div>
 
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<!-- manage applications -->
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+
+  <h2 class="govuk-heading-m">Applications</h2>
 
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <h2 class="govuk-heading-l">Manage applications</h2>
+  <p>
+    Candidate applications for this apprenticeship will appear here.
+  </p>
 
-<p>
-  Candidate applications for this apprenticeship will appear here.
-</p>
-
-  </div>
 </div>
+</div>
+
 
 {% endblock %}
