wage page content updated

--- a/app/views/v14/provider/create/wages.html
+++ b/app/views/v14/provider/create/wages.html
@@ -51,7 +51,7 @@ How much would you like to pay the apprentice? - Recruitment - {{serviceName}} -
           <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="MinApprentice-wage-conditional">
             <div class="govuk-form-group">
               <div id="MinApprentice-wage-conditional" class="govuk-hint govuk-radios__hint">
-                From 1 April 2023, the National Minimum Wage is between £5.28 and £10.42 an hour, depending on the candidate's age.
+                From 1 April 2023, the National Minimum Wage is between £5.28 and £10.42 an hour, depending on the applicant’s age.
                 <br><br>
                 On the vacancy this will be displayed as a yearly wage of £5,752.76 to £11,362
               </div>
